# sysstatd

./: .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md
include/sysstatd/: request_handler.hpp  sigar_service.hpp
src/: main.cpp  request_handler.cpp  sigar_service.cpp
